--- a/backend/league_config_rotate.json
+++ b/backend/league_config_rotate.json
@@ -2,8 +2,8 @@
     "teams": 10,
     "roster": {
         "QB": 1,
-        "RB": 4,
-        "WR": 4,
+        "RB": 3,
+        "WR": 3,
         "TE": 1,
         "FLEX": 0,
         "K": 1,
@@ -12,14 +12,10 @@
     "scoring": "HALF",
     "week": 1,
     "games_divisor": 17,
-    "boost_small": 0.15,
-    "boost_medium": 0.30,
-    "boost_large": 0.60,
+    "boost_small": 0.10,
+    "boost_medium": 0.20,
+    "boost_large": 0.40,
     "top_game_count": 6,
     "weight_projection": 0.50,
-    "weight_last_year": 0.50,
-    "positional_penalties": {
-        "DEF": 0.6,
-        "K": 0.5
-    }
+    "weight_last_year": 0.50
 }
