--- a/backend/league_config.json
+++ b/backend/league_config.json
@@ -1,9 +1,9 @@
 {
-    "teams": 8,
+    "teams": 10,
     "roster": {
-        "QB": 2,
-        "RB": 5,
-        "WR": 5,
+        "QB": 1,
+        "RB": 4,
+        "WR": 4,
         "TE": 2,
         "FLEX": 0,
         "K": 1,
@@ -15,10 +15,11 @@
     "boost_small": 0.08,
     "boost_medium": 0.15,
     "boost_large": 0.20,
-    "boost_broken": 0.80,
+    "boost_max": 1.80,
     "top_game_count": 6,
     "weight_projection": 0.50,
     "weight_last_year": 0.50,
+    "min_historical_score": 3.0,
     "positional_penalties": {
         "DEF": 0.5,
         "K": 0.4
