--- a/backend/league_config_champions.json
+++ b/backend/league_config_champions.json
@@ -13,12 +13,13 @@
     "week": 1,
     "games_divisor": 17,
     "boost_small": 0.08,
-    "boost_medium": 0.15,
-    "boost_large": 0.20,
-    "boost_broken": 0.80,
+    "boost_medium": 0.13,
+    "boost_large": 0.18,
+    "boost_max": 1.80,
     "top_game_count": 6,
     "weight_projection": 0.50,
     "weight_last_year": 0.50,
+    "min_historical_score": 3.0,
     "positional_penalties": {
         "DEF": 0.5,
         "K": 0.4
