--- a/backend/league_config_guillotine.json
+++ b/backend/league_config_guillotine.json
@@ -1,4 +1,5 @@
 {
+    "league_type": "guillotine",
     "teams": 18,
     "roster": {
         "QB": 1,
@@ -12,16 +13,16 @@
     "scoring": "HALF",
     "week": 1,
     "games_divisor": 17,
-    "boost_small": 0.07,
-    "boost_medium": 0.15,
-    "boost_large": 0.25,
-    "boost_max": 1.39,
-    "top_game_count": 10,
-    "weight_projection": 0.50,
-    "weight_last_year": 0.50,
-    "min_historical_score": 5.0,
+    "weight_projection": 0.40,
+    "weight_floor": 0.60,
+    "top_game_count": 17,
+    "min_historical_score": 0.0,
     "positional_penalties": {
-        "DEF": 0.4,
-        "K": 0.4
-    }
+        "DEF": 0.5,
+        "K": 0.5
+    },
+    "boost_small": 0.01,
+    "boost_medium": 0.05,
+    "boost_large": 0.08,
+    "boost_max": 1.39
 }
